update post: Understand Nullish Coalescing Operator With Examples

--- a/cl24u343z0111rznv94jc8w7g.md
+++ b/cl24u343z0111rznv94jc8w7g.md
@@ -1,4 +1,4 @@
-## Nullish Coalescing Operator With Examples
+## Understand Nullish Coalescing Operator With Examples
 
 The Nullish Coalescing operator (??) returns the defined value of the two expressions.
 
